--- a/admin/dashboard.html
+++ b/admin/dashboard.html
@@ -219,6 +219,7 @@
   <!-- Shared footer -->
   <div id="footer-mount"></div>
   <script defer src="/assets/js/footer-loader.js"></script>
+<script defer src="/assets/js/footer-init.js"></script>
 
   <script>
     // Username from session (client-side demo auth)
