--- a/admin/index.html
+++ b/admin/index.html
@@ -316,6 +316,7 @@
   <!-- Shared footer -->
   <div id="footer-mount"></div>
   <script defer src="/assets/js/footer-loader.js"></script>
+<script defer src="/assets/js/footer-init.js"></script>
 
   <script>
     // ---------- State ----------
@@ -640,6 +641,7 @@
   <!-- Shared footer -->
   <div id="footer-mount"></div>
   <script defer src="/assets/js/footer-loader.js"></script>
+<script defer src="/assets/js/footer-init.js"></script>
 
   <!-- Fill share URLs at runtime -->
   <script>
