--- a/index.html
+++ b/index.html
@@ -956,6 +956,7 @@
   <!-- Shared footer mount + loader (optional: keep your simple footer above as a baseline) -->
   <div id="footer-mount"></div>
   <script defer src="/assets/js/footer-loader.js"></script>
+<script defer src="/assets/js/footer-init.js"></script>
 
   <!-- Globe module -->
   <script type="module" src="/assets/js/globe-hero.js?v=4"></script>
