--- a/pages/about/index.html
+++ b/pages/about/index.html
@@ -454,5 +454,6 @@
 
   <div id="footer-mount"></div>
   <script defer src="/assets/js/footer-loader.js"></script>
+<script defer src="/assets/js/footer-init.js"></script>
 </body>
 </html>
