--- a/pages/about/team.html
+++ b/pages/about/team.html
@@ -404,5 +404,6 @@
 
   <div id="footer-mount"></div>
   <script defer src="/assets/js/footer-loader.js"></script>
+<script defer src="/assets/js/footer-init.js"></script>
 </body>
 </html>
